[gd_scene load_steps=4 format=3 uid="uid://djkd22roj1rox"]

[ext_resource type="Script" path="res://game/scripts/ui/main_menu/options_menu.gd" id="1_fyp1r"]
[ext_resource type="FontFile" uid="uid://mrfh3imykou7" path="res://game/assets/fonts/DungeonFont.ttf" id="1_wh03j"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5s6vt"]
color = Color(0.729412, 0.54902, 0.152941, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 5

[node name="OptionsMenu" type="Panel"]
anchors_preset = -1
anchor_right = 0.375
anchor_bottom = 0.781
offset_right = -3.05176e-05
offset_bottom = -0.0880127
script = ExtResource("1_fyp1r")

[node name="Header" type="Label" parent="."]
layout_mode = 2
offset_left = 7.0
offset_top = 5.0
offset_right = 425.0
offset_bottom = 46.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_wh03j")
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Header"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.22
anchor_right = 1.0
anchor_bottom = 12.0
offset_top = -0.0200005
offset_right = 1.0
offset_bottom = -3.05176e-05

[node name="VBoxContainer" type="VBoxContainer" parent="Header/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Header/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VolumeSlider" type="HSlider" parent="Header/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/slider = SubResource("StyleBoxLine_5s6vt")
value = 100.0
rounded = true
scrollable = false

[node name="VBoxContainer" type="VBoxContainer" parent="Header/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="Header/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_wh03j")
theme_override_font_sizes/font_size = 24
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolumeLevel" type="Label" parent="Header/ScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_wh03j")
theme_override_font_sizes/font_size = 18
text = "100%"
horizontal_alignment = 1

[node name="OptionsBack" type="Button" parent="."]
layout_mode = 2
anchor_left = 0.005
anchor_top = 0.006
anchor_right = 0.271
anchor_bottom = 0.087
offset_left = 0.255
offset_top = 1.964
offset_right = 0.220978
offset_bottom = 1.978
theme_override_colors/font_color = Color(1, 0.745098, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("1_wh03j")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="value_changed" from="Header/ScrollContainer/VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_update_volume_level"]
[connection signal="pressed" from="OptionsBack" to="." method="_back_button_echo"]
